--- a/client/src/app/components/profile/profile-components/personal-details/personal-details.component.html
+++ b/client/src/app/components/profile/profile-components/personal-details/personal-details.component.html
@@ -1,5 +1,6 @@
 <h5>{{ username }}</h5>
-<br>
-email: {{ email }}
+
+<br><button type="button" name="button" class="btn btn-sm btn-info btn-margin-left" [routerLink]="['/user/', username]">Public Profile</button>
+<br><br>email: {{ email }}
 
 <!-- {{ username }} -->
