--- a/client/src/assets/css/demo.css
+++ b/client/src/assets/css/demo.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
 	font-weight: normal;
 	font-style: normal;
 	font-family: 'codropsicons';
@@ -7,7 +7,7 @@
 		url('../fonts/codropsicons/codropsicons.woff') format('woff'),
 		url('../fonts/codropsicons/codropsicons.ttf') format('truetype'),
 		url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
-}
+} */
 
 
 body {
