--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -22,16 +22,17 @@
           <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" routerLink="/channel">Channel</a>
           </li>
+          <li *ngIf="authService.loggedIn() && username" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:false}">
+            <a class="nav-link" [routerLink]="['/user/', username]">Profile</a>
+          </li>
           <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:false}">
-            <a class="nav-link" routerLink="/profile">Profile</a>
+            <a class="nav-link" routerLink="/settings">Settings</a>
           </li>
           <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" routerLink="/register">Register</a>
           </li>
           <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" routerLink="/login">Login</a>
-          </li>
-          <li *ngIf="authService.loggedIn()" class="nav-item"><a class="nav-link" (click)="onLogoutClick()">Logout</a>
           </li>
         </ul>
         <!-- <div class="input-group">
