--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -2,7 +2,8 @@
   <div class="col-3">
     <div class="nav flex-column nav-pills" aria-orientation="vertical">
       <a class="nav-link" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/settings', { outlets: {'section':['personal-details'] }}]">Personal Details</a>
-      <a class="nav-link" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/settings', { outlets: {'section':['login-status'] }}]">Login status</a>
+      <a class="nav-link" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/settings', { outlets: {'section':['active-sessions'] }}]">Active Sessions</a>
+      <!-- <a class="nav-link" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/settings', { outlets: {'section':['login-status'] }}]">Login status</a> -->
       <a class="nav-link" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/settings', { outlets: {'section':['published'] }}]">Published</a>
       <a class="nav-link" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/settings', { outlets: {'section':['published-private'] }}]">Published (Private)</a>
       <a class="nav-link" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/settings', { outlets: {'section':['unpublished-draft'] }}]">Unpublished (Draft)</a>
