refactor static page to new overlay component

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-overlay></app-overlay>
 <app-navbar></app-navbar>
 <div id="body-container" class="container">
   <flash-messages></flash-messages>
