--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -1,5 +1,4 @@
 <footer id="footer" class="footer">
-	<a class="nav-footer-link" href="/about">About</a>
-	<a class="nav-footer-link" href="/privacy-policy">Privacy Policy</a>
-	<!-- <a class="nav-footer-link" href="#">Terms</a> -->
+	<a class="nav-footer-link" (click)="showOverlay('about')">About</a>
+	<a class="nav-footer-link" (click)="showOverlay('privacy-policy')">Privacy Policy</a>
 </footer>
