--- a/client/src/app/components/profile/profile-components/unpublished/unpublished.component.html
+++ b/client/src/app/components/profile/profile-components/unpublished/unpublished.component.html
@@ -2,18 +2,25 @@
 <button [disabled]="loading" type="button" name="button" class="btn btn-sm btn-secondary btn-margin-left" (click)="getUnpublishedBlogs()"><span class="fas fa-redo-alt"></span> Refresh</button>
 <br><br>
 
-<table *ngIf="!loading && unpublishedBlogs" class="table table-sm">
+<table class="table table-sm">
     <thead>
         <tr>
-            <th scope="col"># ({{ unpublishedBlogs.length }})</th>
+            <th scope="col" style="width: 80px;">ID<span *ngIf="!loading"> ({{ unpublishedBlogs.length }})</span></th>
             <th scope="col" style="width: 65%">Title</th>
             <th scope="col">Created on</th>
         </tr>
     </thead>
-    <tbody>
-        <tr *ngIf="unpublishedBlogs.length == 0">
+    <tbody *ngIf="loading">
+        <tr>
+            <td colspan="3" style="text-align: center;"><span class="spinner">Loading</span></td>
+        </tr>
+    </tbody>
+    <tbody *ngIf="!loading && unpublishedBlogs.length == 0">
+        <tr>
             <td colspan="3" style="text-align: center;">No records</td>
         </tr>
+    </tbody>
+    <tbody *ngIf="!loading && unpublishedBlogs.length">
         <tr *ngFor="let record of unpublishedBlogs">
             <td>{{ record._id | slice:0:7 }}</td>
             <td [routerLink]="['/blog/', record._id]" style="cursor: pointer;"><b>{{ record.title }}</b></td>
