--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,6 +7,26 @@
 	border-bottom: none;
 }
 
+@keyframes spinner {
+  to {transform: rotate(360deg);}
+}
+.spinner {
+	height: 20px;
+	margin-left: 28px;
+}
+.spinner::before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  margin-left: -28px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  border-top-color: #000;
+  animation: spinner .6s linear infinite;
+}
+
 .notification-box {
 	position: fixed;
 	bottom: 30px;
