update bootstrap, fontawesome, publication setting

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="jumbotron text-center" style="margin-top: -25px;">
-  <h1 style="color: #fff; opacity: 0.8;">The Blog</h1><br>
+<div class="jumbotron text-center" style="margin-top: -25px; height: 240px; border-radius: .3rem;">
+  <h1 style="color: #fff; opacity: 0.8; padding-top: 65px;">The Blog</h1><br>
   <!-- <p class="lead" style="color: #fff; opacity: 0.8;">Welcome to the Blog</p> -->
   <div>
     <a *ngIf="!authService.loggedIn()" routerLink="/register" class="btn btn-transparent-outline">Register</a>
