--- a/client/src/app/components/blog/blog-setting/blog-setting.component.css
+++ b/client/src/app/components/blog/blog-setting/blog-setting.component.css
@@ -1,10 +1,9 @@
-
 /* ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-wrapper {
 	padding-bottom: 0 !important;
 } */
 
 ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-infix {
-	padding: 0 !important;
+  padding: 0 !important;
 }
 
 /* ::ng-deep .mat-form-field-infix {
@@ -12,27 +11,27 @@
 } */
 
 ::ng-deep .mat-form-field-underline {
-	display: none !important;
+  display: none !important;
 }
 
 ::ng-deep .mat-form-field {
-	width: 50%;
+  width: 50%;
 }
 
 .page-container {
-	max-width: 575px;
+  max-width: 575px;
 }
 
 @media screen and (max-width: 768px) {
-    ::ng-deep .mat-form-field {
-		width: 70%;
-	}
+  ::ng-deep .mat-form-field {
+    width: 70%;
+  }
 }
 
 @media screen and (max-width: 575px) {
-	.page-container {
-		width: 100%;
-	}
+  .page-container {
+    width: 100%;
+  }
 }
 
 .row-content {
@@ -40,10 +39,10 @@
 }
 
 .publish-form-input {
-	padding: .2rem .75rem;
-	border: 2px solid #00cd9a;
-	border-radius: .25rem;
-	margin: 10px 0 20px 0;
+  padding: .2rem .75rem;
+  border: 2px solid #00cd9a;
+  border-radius: .25rem;
+  margin: 10px 0 20px 0;
   height: 40px;
   min-width: 280px;
   -webkit-appearance: none;
@@ -57,7 +56,7 @@
   height: 28px;
 }
 
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -87,15 +86,15 @@
   transition: .2s;
 }
 
-input:checked + .slider {
+input:checked+.slider {
   background-color: #2196F3;
 }
 
-input:focus + .slider {
+input:focus+.slider {
   box-shadow: 0 0 1px #2196F3;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
   -webkit-transform: translateX(24px);
   -ms-transform: translateX(24px);
   transform: translateX(24px);
@@ -107,4 +106,18 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.option-box {
+  margin: 10px;
+  padding: 20px;
+  border-radius: .25rem;
+  border-style: solid;
+  border-color: #6c757d;
+  text-align: center;
+  vertical-align: center;
+}
+
+.option-selected {
+  border-color: #0d6efd;
 }
