--- a/client/src/app/components/blog/blog-setting/blog-setting.component.html
+++ b/client/src/app/components/blog/blog-setting/blog-setting.component.html
@@ -3,27 +3,34 @@
     <h5 class="page-header" style="margin-top: -60px;">Publication Setting</h5>
     <div *ngIf="processing">Processing ...<br><br></div>
     <form *ngIf="!processing" [formGroup]="publishForm" (submit)="onSettingSubmit()">
-        <b>Blog title</b> ({{blog.createdAt | date: "'created on' dd MMM yyyy 'at' HH:mm"}})
-        <div class="row-content">{{blog.title}}</div>
+        <b>Blog title</b>
+        <div class="row-content">{{ blog.title }}</div>
 
-        <b>Publish status</b>
-        <div style="margin: 10px 0 40px 0;">
-            <span>
-                <div style="float: left;line-height: 28px;">{{publishForm.get('published').value ? "Visible (Public)" : "Not visible (Private)"}}</div>
-                <div style="float: right;">
-                    <label class="switch">
-                        <input type="checkbox" [checked]="publishForm.get('published').value" (change)="togglePublished()">
-                        <span class="slider round"></span>
-                    </label>
-                </div>
-            </span>
+        <div *ngIf="!neverPublished">
+            <b>Visibility status</b>
+            <div style="margin: 10px 0 40px 0;">
+                <span>
+                    <div style="float: left;line-height: 28px;">{{publishForm.get('published').value ? "Public (Visible)" : "Private (Not visible)"}}</div>
+                    <div style="float: right;">
+                        <label class="switch">
+                            <input type="checkbox" [checked]="publishForm.get('published').value" (change)="togglePublished()">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </span>
+            </div>
+            <br>
         </div>
 
-        <br>
-        <b>Publish date</b>
+        <b>Created date</b>
         <div class="row-content">
-            <div *ngIf="neverPublished">This blog has never been published (Draft)</div>
-            <div *ngIf="publishedDate">This blog has been published {{publishedDate | date: "' on' dd MMM yyyy 'at' HH:mm"}}</div>
+            <div>{{blog.createdAt | date: "dd MMM yyyy HH:mm"}}</div>
+        </div>
+
+        <b>Publish status</b>
+        <div class="row-content">
+            <div *ngIf="neverPublished">This blog was never published (Draft)</div>
+            <div *ngIf="publishedDate">This blog was published {{publishedDate | date: "' on' dd MMM yyyy 'at' HH:mm"}}</div>
         </div>
         <div *ngIf="neverPublished && publishForm.get('published').value">
             <select formControlName="schedule" class="publish-form-input">
@@ -32,27 +39,39 @@
                 <option value="custom">Publish at custom datetime</option>
             </select>
             <br>
-            <input *ngIf="publishForm.get('schedule').value == 'custom'" type="datetime-local" id="publishdatetime" class="publish-form-input" [value]="publishForm.get('publishedAt').value" (change)="dateChanged($event)">
+
         </div>
 
-
-        <!-- <br>
-        <b>Category</b>
-        <div>
-            <p>Coming soon ...</p>
+        <b *ngIf="neverPublished">Publish action <br></b>
+        <div *ngIf="neverPublished" class="btn-group" role="group" aria-label="Basic radio toggle button group">
+            <div class="option-box" [ngClass]="{'option-selected': publishAction=='publish-now' }" (click)="onItemChange('publish-now')">
+                <i class="far fa-paper-plane" style="font-size: 28px;"></i>
+                <br><br>
+                <b>Publish now</b>
+            </div>
+            <div class="option-box" [ngClass]="{'option-selected': publishAction=='publish-schedule' }" (click)="onItemChange('publish-schedule')">
+                <i class="far fa-calendar-alt" style="font-size: 28px;"></i>
+                <br><br>
+                <b>Schedule to publish</b>
+            </div>
+            <div *ngIf="isNewPost" class="option-box" [ngClass]="{'option-selected': publishAction=='skip' }" (click)="onItemChange('skip')">
+                <i class="fas fa-angle-double-right" style="font-size: 28px;"></i>
+                <br><br>
+                <b>Skip for now</b>
+            </div>
         </div>
 
-        <br>
-        <b>Channel</b>
-        <div>
-            <p>Coming soon ...</p>
-        </div> -->
+        <div *ngIf="publishAction=='publish-schedule'">
+            <div>Please choose a date time for publish:</div>
+            <input type="datetime-local" id="publishdatetime" class="publish-form-input" [value]="publishForm.get('publishedAt').value" (change)="dateChanged($event)">
+        </div>
+
+        <br><br>
 
         <div class=" blog-operation-button-group">
-            <button *ngIf="isNewPost" type="button" class="btn btn-sm btn-secondary" (click)="goSkip()">Skip for now</button>
             <button *ngIf="!isNewPost" type="button" class="btn btn-sm btn-secondary" (click)="goBack()">Back</button>
             <button *ngIf="!processing" type="button" class="btn btn-sm btn-danger btn-margin-left" (click)="resetPublishForm()">Reset</button>
-            <button *ngIf="!processing" type="submit" class="btn btn-sm btn-info btn-margin-left" [disabled]="publishForm.get('published').value == storedBlog.published">Confirm</button>
+            <button *ngIf="!processing" type="submit" class="btn btn-sm btn-info btn-margin-left" [disabled]="(publishedDate && publishForm.get('published').value == storedBlog.published) || (!publishedDate && !publishAction)">Confirm</button>
         </div>
 
     </form>
