--- a/client/src/app/components/blog/blog.component.html
+++ b/client/src/app/components/blog/blog.component.html
@@ -11,6 +11,20 @@
 <span *ngIf="loadingBlogs" class="spinner" style="margin-left: 40px;">Loading</span>
 <br><br>
 
+<div *ngIf="loadingBlogs" style="max-width: 800px; margin: auto;">
+	<div class="card" style="color: #868e96;" *ngFor='let in of setArrayFromNumber(5); let i = index'>
+		<div class="card-body">
+			<h5 class="card-title placeholder-wave">
+				<span class="placeholder col-6 placeholder-sm"></span>
+			</h5>
+			<p class="card-text placeholder-wave">
+				<span class="placeholder col-7 placeholder-sm"></span><br><br>
+				<span class="placeholder col-4 placeholder-sm"></span>
+			</p>
+		</div>
+	</div>
+</div>
+
 <div *ngIf="!loadingBlogs" style="max-width: 800px; margin: auto;">
 	<div id="{{ blog._id }}" class="card" *ngFor="let blog of blogPosts">
 		<div class="card-body">
