--- a/client/src/app/modules/quill-editor/quill-editor/quill-editor.component.html
+++ b/client/src/app/modules/quill-editor/quill-editor/quill-editor.component.html
@@ -1,6 +1,4 @@
-<div id="editor"
-    [ngClass]="{'ql-valid': isContentValid && isContentDirty && isEditing, 'ql-invalid': !isContentValid && isContentDirty && isEditing}">
+<div id="editor" [ngClass]="{'ql-valid': isContentValid && isContentDirty && isEditing, 'ql-invalid': !isContentValid && isContentDirty && isEditing}">
 </div>
-
+<span *ngIf="!isLengthWithinLimit(50000)" class="ql-message">tips - for large image, you may use image upload button instead</span>
 <span *ngIf="isEditing" class="ql-counter">{{ blogLength-1 || 0 }} / 50000</span>
-<!-- Value: {{ blogContent | json }} -->
